2008-12-01  Paul Bolle  <pebolle@tiscali.nl>

	Bug 562817 – GtkDialog: typo

	* gtk/gtkdialog.c: Fix typo

2008-11-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 554453 – "typeahead find" widget of GtkTreeView appears on 
	wrong monitor in a multi-head environment

	* gtk/gtktreeview.c (gtk_tree_view_ensure_interactive_directory):
	Make sure the typeahead window follows screen changes of the
	treeview. Noticed by Rainer Stransky

2008-11-30  Christian Dywan  <christian@imendio.com>

	Bug 559622 – GdkDevice test segfaults

	* gdk/x11/gdkdisplay-x11.c (gdk_display_x11_dispose):
	* gdk/x11/gdkinput.c (gdk_device_class_init), (gdk_device_dispose):
	Free and reset device in dispose. Patch by Michael Natterer and myself.

2008-11-30  Christian Dywan  <christian@imendio.com>

	Bug 554076 – eventually release g_new-ed supported_atoms

	* gdk/x11/gdkevents-x11.c (cleanup_atoms),
	(gdk_x11_screen_supports_net_wm_hint): Set cleanup callback.
        Patch by Caolan McNamara.

2008-11-30  Christian Dywan  <christian@imendio.com>

	Bug 539263 – Deprecate gdk_window_get_toplevels

	* gdk/gdkwindow.c:
	* gdk/gdkwindow.h: Deprecate gdk_window_get_toplevels

2008-11-29  Federico Mena Quintero  <federico@novell.com>

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): If tree lines are
	enabled, flip them around for the right-to-left case.  Fixes
	https://bugzilla.novell.com/show_bug.cgi?id=447004.  Patch by
	Ricardo Cruz <rpmcruz@alunos.dcc.fc.up.pt>

2008-11-29  Christian Persch  <chpe@gnome.org>

	* gtk/gtkselection.c: Typo fix.

2008-11-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkselection.c:
	* gtk/gtkentry.c:
	* gtk/gtkdnd.c:
	* gtk/gtkcolorsel.c:
	* gtk/gtkbindings.c: Improve deprecation annotations.

2008-11-26  Christian Dywan  <christian@imendio.com>

	Bug 561504 – testgtk should load rc file from sub folder

	* tests/testgtk.c (main):
        Make testgtk look in subfolder and warn if not found

2008-11-25  Johan Dahlin  <jdahlin@async.com.br>
